[gd_scene load_steps=11 format=3 uid="uid://ds3nox3ujrl06"]

[ext_resource type="Script" uid="uid://b6bpemm7mt8t6" path="res://scenes/end_game_screen/end_game_screen.gd" id="1_214ef"]
[ext_resource type="FontFile" uid="uid://d3ssqlodqofhc" path="res://assets/fonts/karmatic-arcade.regular.ttf" id="2_n3ur5"]
[ext_resource type="Theme" uid="uid://n0r8g1cxvm4g" path="res://assets/misc/button_theme.tres" id="3_83yby"]
[ext_resource type="FontFile" uid="uid://b07rpjdpjlrw" path="res://assets/fonts/Kenney Pixel.ttf" id="4_214ef"]
[ext_resource type="Script" uid="uid://bl7n6csnqx6ei" path="res://scenes/menu_screen/menu_button.gd" id="5_n3ur5"]

[sub_resource type="LabelSettings" id="LabelSettings_214ef"]
font = ExtResource("2_n3ur5")
font_size = 64

[sub_resource type="LabelSettings" id="LabelSettings_6cprg"]
font = ExtResource("4_214ef")
font_size = 36

[sub_resource type="LabelSettings" id="LabelSettings_dybuw"]
font = ExtResource("2_n3ur5")
font_size = 36

[sub_resource type="Animation" id="Animation_vtso4"]
resource_name = "pulse_text"
loop_mode = 2
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VBoxContainer/StatusLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 0, 0, 1), Color(0.501961, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_iqjl0"]
_data = {
&"pulse_text": SubResource("Animation_vtso4")
}

[node name="EndGameScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_214ef")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.752941)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -121.0
offset_top = -65.5
offset_right = 121.0
offset_bottom = 65.5
grow_horizontal = 2
grow_vertical = 2

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
modulate = Color(1, 0, 0, 1)
layout_mode = 2
text = "Level Complete"
label_settings = SubResource("LabelSettings_214ef")
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2

[node name="GameStats" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_83yby")
label_settings = SubResource("LabelSettings_6cprg")
horizontal_alignment = 1

[node name="RatingLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_dybuw")
horizontal_alignment = 1

[node name="Spacer2" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2

[node name="ReturnButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("3_83yby")
theme_type_variation = &"FlatButton"
text = "Return to Main Menu"
script = ExtResource("5_n3ur5")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_iqjl0")
}
autoplay = "pulse_text"

[connection signal="pressed" from="VBoxContainer/ReturnButton" to="." method="_on_return_button_pressed"]
